--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
   <title>Weather-Dashboard-Refactor</title>
 </head>
 <body>
+  <header>
+    <h1>Weather Dashboard</h1>
+  </header>
+<!-- Main parent container -->
+<div class="dashboard">
+  <!-- Child container 1 -->
+  <div class="sidebar">
+    <h2>Search for a city:</h2>
+
+    <!-- Child container 2 -->
+    <div class="weather-info">
+      <div>
+        <h2>Today's weather</h2>
+      </div>
+      <!-- Sibling container (child 2) -->
+      <div class="five-day">
+        <h2>5 Day Forecast</h2>
+
+      </div>
+
+      <div class="current-day">
+
+      </div>
+      <div class="current-day">
+
+      </div>
+      <div class="current-day">
+
+      </div>
+      <div class="current-day">
+
+      </div>
+      <div class="current-day">
+
+      </div>
+
+
+    </div>
+  </div>
+</div>
 
 
 
