--- a/index.html
+++ b/index.html
@@ -18,37 +18,55 @@
   <!-- Child container 1 -->
   <div class="sidebar">
     <h2>Search for a city:</h2>
-
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, non. Fuga distinctio quos alias, fugit inventore ab laudantium doloribus odio dolor omnis, consequuntur deleniti hic veritatis dicta porro dolore tenetur.</p>
+  </div>
     <!-- Child container 2 -->
     <div class="weather-info">
-      <div>
-        <h2>Today's weather</h2>
-      </div>
+        <div class="current-weather">
+          <h2>Today's weather</h2>
+          <p>Temp</p>
+          <p>Humidity</p>
+          <p>Wind-speed</p>
+          <p>UV-Index</p>
+        </div>
+      
       <!-- Sibling container (child 2) -->
       <div class="five-day">
-        <h2>5 Day Forecast</h2>
+          <div class="forcast">
+            <h2>5 Day Forecast</h2>
+          </div>
+     
+          <div class="current-day">
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>Wind</p>
+          </div>
 
+          <div class="current-day">
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>Wind</p>
+          </div>
+
+          <div class="current-day">
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>Wind</p>
+          </div>
+
+          <div class="current-day">
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>Wind</p>
+          </div>
+
+          <div class="current-day">
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>Wind</p>
+          </div>
       </div>
-
-      <div class="current-day">
-
-      </div>
-      <div class="current-day">
-
-      </div>
-      <div class="current-day">
-
-      </div>
-      <div class="current-day">
-
-      </div>
-      <div class="current-day">
-
-      </div>
-
-
     </div>
-  </div>
 </div>
 
 
