code is functioning, need to update css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <title>Weather-Dashboard-Refactor</title>
 </head>
 <body>
+
+<body onload="checkSearchHistory()">
+  <div id="spinner" class="spinner-container hide">
+    <div class="spinner"></div>
+  </div>
+
   <header>
     <h1>Weather Dashboard</h1>
   </header>
