--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <div class="search-button" onclick="submit()">
           <img src="./assets/images/search_icon.webp" alt="search">
         </div>
-        <ul id="search-history"></ul>
+          <div class="history">
+            <ul id="search-history"></ul>
+          </div>
       </div>
   </div>
     <!-- Child container 2 -->
