--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <script src="https://kit.fontawesome.com/668a795429.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <title>Weather-Dashboard-Refactor</title>
@@ -24,12 +25,21 @@
   <!-- Child container 1 -->
   <div class="sidebar">
     <h2>Search for a city:</h2>
-      <div class="search">
+
+
+    <div class="search">
+      <input class="search-txt" type="text" placeholder="city, state" id="cityState">
+      <a class="search-btn" href="#"></a>
+    
+
+      <!-- <div class="search">
         <input onkeydown="if(event.keyCode === 13) submit()"
-        id="cityState" type="text"placeholder="city, state"/>
-        <div class="search-button" onclick="submit()">
+        id="cityState" type="text"placeholder="city, state"/> -->
+
+        <!-- <div class="search-button" onclick="submit()">
+          <i class="fas fa-search-plus"></i>
           <img src="./assets/images/search_icon.webp" alt="search">
-        </div>
+        </div> -->
           <div class="history">
             <ul id="search-history"></ul>
           </div>
