search button not done

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 
     <div class="search">
       <input onkeydown="if(event.keyCode === 13) submit()" class="search-txt" type="text" placeholder="city, state" id="cityState">
-      <a class="search-btn" href="#">
+      <!-- <a class="search-btn" href="#">
         <i class="fas fa-search"></i>
-      </a>
-
-      
+      </a> -->
+      <div class="click-here">
+      <button class="search-btn" type="button">Search</button>
+      </div>
     
 
       <!-- <div class="search">
